Added working version of the Stopwatch application that satisfies the Edx requirements.

--- a/module-1/assignment1-stopwatch/stopWatch.html
+++ b/module-1/assignment1-stopwatch/stopWatch.html
@@ -15,8 +15,8 @@
   <p id="timer"></p>
 
   <button id="startStop">Start / Stop</button>
-  <button id="reset"></button>
-  <button id="recordTime"></button>
+  <button id="reset">Reset</button>
+  <button id="recordTime">Record Time</button>
 
   <p>Past Times</p>
   <div id="pastTimes"></div>
